--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,7 @@ h1 {
   outline: 2px solid black;
   width: 200px;
   border-radius: 5px;
-
   display: grid;
-
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(5, auto);
 
@@ -63,19 +61,17 @@ i, .temp {
 #location {
   background-color: #ffffff00;
   border: 1px solid black;
-  color: black;
   padding: 5px 10px;
   font-weight: 500;
 }
 
 #location::placeholder {
-  color: black;
+  color: rgb(127, 127, 127);
 }
 
 #submit {
   background-color: #ffffff00;
   border: 1px solid black;
-  color: black;
   border-radius: 5px;
   padding: 5px 10px;
   cursor: pointer;
